--- a/infra/github-actions/runnerdeployment.yaml
+++ b/infra/github-actions/runnerdeployment.yaml
@@ -6,6 +6,7 @@ spec:
   template:
     spec:
       repository: tatsukoni-pra/k8s-actions-runner-controller-client-demo
+      dockerEnabled: false # Only Set Fargate
 ---
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: HorizontalRunnerAutoscaler
